Fix .logo alignment in small screens, case #19

--- a/assets/css/sass/blog/_responsive.scss
+++ b/assets/css/sass/blog/_responsive.scss
@@ -31,12 +31,10 @@
 
 			a {
 				margin-left: 34px !important;
-				// margin-left: 12px !important;
 				padding-top: 6px !important;
 				padding-bottom: 6px;
 			}
 
-			// .btn-menu,
 			.btn-search {
 				display: inline
 			}
@@ -113,7 +111,7 @@
 				display: inline;
 				font-size: 1.375em;
 				line-height: 0;
-				margin-left: 30px;
+				margin-left: 8px;
 				padding-top: 0px;
 			}
 		}
